# ada

./: .gitignore  README.md  config.json  pyproject.toml
src/ada/: __init__.py  main.py
src/ada/modules/: editor.py  human_in_the_loop.py  llm.py  parsers.py  voice_recorder.py
